# tq

./: .gitignore  AGENTS.md  README.md  index.html  install.sh  pyproject.toml
tests/: test_parser.py  test_recommender.py  test_security.py
tq/: cli.py  config.py  hardware.py  hf.py  installer.py  parser.py  recommender.py  scanner.py  security.py  server.py  types.py
tq/chat/: __init__.py  client.py  permissions.py  render.py  repl.py  tools.py
